--- a/index.html
+++ b/index.html
@@ -39,19 +39,18 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">Start Bootstrap</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li>
+                    <!-- <li>
                         <a href="#">About</a>
+                    </li> -->
+                    <li>
+                        <a href="https://drive.google.com/open?id=0BwIEk8Tb3s4xQ08xSmRicDRYVkU">Resume</a>
                     </li>
                     <li>
-                        <a href="#">Services</a>
-                    </li>
-                    <li>
-                        <a href="#">Contact</a>
+                        <a href="https://www.linkedin.com/in/pfrazer/">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -80,18 +79,18 @@
                     <img class="img-responsive" src="http://placehold.it/700x400" alt="">
                 </a>
                 <h3>
-                    <a href="#">Project One</a>
+                    <a href="https://github.com/philipfrazer/project-1">Black Jack</a>
                 </h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+                <p>A single page Black Jack card game app where a user can play against a simulated dealer. App made using JavaScript, CSS3, HTML5, and jQuery.</p>
             </div>
             <div class="col-md-6 portfolio-item">
                 <a href="#">
                     <img class="img-responsive" src="http://placehold.it/700x400" alt="">
                 </a>
                 <h3>
-                    <a href="#">Project Two</a>
+                    <a href="https://github.com/philipfrazer/project2">Movie Collection</a>
                 </h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+                <p>An application that allows users to create a personalized list of favorite films  /  collection of films utilizing a third party API search. Built with: JavaScript, CSS3, HTML5, MongoDB, Mongoose, NodeJS, Passport.</p>
             </div>
         </div>
         <!-- /.row -->
@@ -99,53 +98,31 @@
         <!-- Projects Row -->
         <div class="row">
             <div class="col-md-6 portfolio-item">
-                <a href="#">
+                <a href="https://github.com/philipfrazer/project3">
                     <img class="img-responsive" src="http://placehold.it/700x400" alt="">
                 </a>
                 <h3>
-                    <a href="#">Project Three</a>
+                    <a href="#">Career Compass</a>
                 </h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+                <p>A dashboard application that assists users in a job search by allowing them to search and access job postings from a third party API. Then allowing to save desired listings in an organized system to help streamline the job search process. Built with:  AngularJS, JavaScript, CSS3, HTML5, MongoDB, Mongoose, NodeJS, Passport.</p>
             </div>
             <div class="col-md-6 portfolio-item">
-                <a href="#">
+                <a href="https://github.com/ChrisRdrq/datenight">
                     <img class="img-responsive" src="http://placehold.it/700x400" alt="">
                 </a>
                 <h3>
-                    <a href="#">Project Four</a>
+                    <a href="https://github.com/ChrisRdrq/datenight">Date Night</a>
                 </h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+                <p>A streamline date organization / planning app with social activity and dining suggestions for a user to generate date ideas. This app was built using: Ruby on Rails, HTML5, CSS3.</p>
             </div>
         </div>
         <!-- /.row -->
 
-        <!-- Projects Row -->
-        <div class="row">
-            <div class="col-md-6 portfolio-item">
-                <a href="#">
-                    <img class="img-responsive" src="http://placehold.it/700x400" alt="">
-                </a>
-                <h3>
-                    <a href="#">Project Five</a>
-                </h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
-            </div>
-            <div class="col-md-6 portfolio-item">
-                <a href="#">
-                    <img class="img-responsive" src="http://placehold.it/700x400" alt="">
-                </a>
-                <h3>
-                    <a href="#">Project Six</a>
-                </h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
-            </div>
-        </div>
-        <!-- /.row -->
 
         <hr>
 
         <!-- Pagination -->
-        <div class="row text-center">
+        <!-- <div class="row text-center">
             <div class="col-lg-12">
                 <ul class="pagination">
                     <li>
@@ -171,7 +148,7 @@
                     </li>
                 </ul>
             </div>
-        </div>
+        </div> -->
         <!-- /.row -->
 
         <hr>
