--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             </div>
             <div class="col-md-6 portfolio-item">
                 <a href="#">
-                    <img class="img-responsive" src="http://placehold.it/700x400" alt="">
+                    <img class="img-responsive" src="https://lh6.googleusercontent.com/KbpAogLm0K1We0P_OplXqy5EIzSRE0tvCVPzE18qhdUrgVogpJIJQn5bHN3uA3fmXGdeRBV4Mw8ToZA=w1194-h935" alt="">
                 </a>
                 <h3>
                     <a href="https://github.com/philipfrazer/project2">Movie Collection</a>
@@ -108,7 +108,7 @@
             </div>
             <div class="col-md-6 portfolio-item">
                 <a href="https://github.com/ChrisRdrq/datenight">
-                    <img class="img-responsive" src="http://placehold.it/700x400" alt="">
+                    <img class="img-responsive" src="https://lh3.google.com/u/0/d/0BwIEk8Tb3s4xWWwyQjlWdG8xeHc=w1194-h935-iv1" alt="">
                 </a>
                 <h3>
                     <a href="https://github.com/ChrisRdrq/datenight">Date Night</a>
