--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <div class="row">
             <div class="col-md-6 portfolio-item">
                 <a href="https://github.com/philipfrazer/project3">
-                    <img class="img-responsive" src="http://placehold.it/700x400" alt="">
+                    <img class="img-responsive" src="https://lh3.google.com/u/0/d/0BwIEk8Tb3s4xTXZiZzFHQXZ4Rlk=w1661-h900-iv1" alt="">
                 </a>
                 <h3>
                     <a href="#">Career Compass</a>
